change icons size, add new icons, fix visibility of elements, fix footer and etc #654

--- a/app/components/modules/Footer.scss
+++ b/app/components/modules/Footer.scss
@@ -50,7 +50,16 @@
   }
 
   .Footer__menus {
-    padding: 50px 0;
+		padding: 50px 0;
+		
+		.space-between-columns {
+			ul {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+		}
+
 	}
 	.Footer__description {
     color: #333333;
