--- a/app/components/modules/Header.scss
+++ b/app/components/modules/Header.scss
@@ -20,8 +20,13 @@
     }
 
     .button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       min-width: 170px;
       padding: 0.7rem 1rem;
+      color: #fff !important;
+      letter-spacing: 1px;
     }
   }
   ul.menu > li.toggle-menu > a {
@@ -42,42 +47,76 @@
 
   ul > li.delim {
     height: 44px;
-    width: 2px;
-    border: 1px solid $light-gray;
+    width: 1px;
+    border-left: 1px solid $light-gray;
   }
-  ul > li > a {
-    font-size: 1.1rem;
-
-    .Icon {
-      fill: #333;
+  ul > li {
+    &.submit-story > a {
+      padding: 0.53rem 1rem !important;
     }
-
-    &:hover {
-      color: #3F46AD;
+    &.submit-story-pencil > a {
+      height: 50px;
+      width: 50px;
+      min-width: 50px !important;
 
       .Icon {
-        fill: #3F46AD;
+        margin-right: 0 !important;
       }
     }
 
-    &.number {
-      color: #757575;
-      font-size: 18px;
-      font-weight: 300;
-      letter-spacing: 1.8px;
-      line-height: 23px;
+    > a {
+      font-size: 1.1rem;
 
-      span {
-        margin-right: 13px;
+      .Icon {
+        fill: #333;
       }
 
       &:hover {
         color: #3F46AD;
-      }
-    }
 
-    @include breakpoint(small only) {
-      font-size: 1em;
+        .Icon {
+          fill: #3F46AD;
+
+          #search {
+            fill: #3F46AD;
+          }
+        }
+      }
+
+      &.button {
+        .Icon {
+          fill: #fff;
+          margin-right: 5px;
+        }
+
+        &:hover {
+          .Icon {
+            fill: #fff;
+          }
+        }
+      }
+
+      &.number {
+        display: flex;
+        align-items: center;
+        color: #757575;
+        font-size: 18px;
+        font-weight: 300;
+        letter-spacing: 1.8px;
+        line-height: 23px;
+
+        span {
+          margin-right: 13px;
+        }
+
+        &:hover {
+          color: #3F46AD;
+        }
+      }
+
+      @include breakpoint(small only) {
+        font-size: 1em;
+      }
     }
   }
   ul > li > span {
@@ -173,23 +212,27 @@ ul > li.Header__top-logo > a {
   a {
     position: relative;
     text-transform: uppercase;
-    color: #0B1B69;
+    color: #2572ba;
     font-family: "Roboto Slab";
     font-size: 36px !important;
     font-weight: bold;
+
+    &:hover {
+      color: #2572ba !important;
+    }
   }
 
   .beta {
-    position: relative;
-    top: 12px;
-    right: 22px;
+    display: block;
     font-size: 0.7rem;
-    color: #4ba2f2;
+    color: #2578be;
     text-transform: none;
   }
 }
 
 .Header__sort-order-menu {
+  margin-left: 10px;
+
   .VerticalMenu {
     left: 0;
   }
